--- a/package.json
+++ b/package.json
@@ -72,9 +72,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "regenerator-runtime": "0.13.5",
-    "semver": "7.3.4",
-    "sweetalert2": "^11.0.16",
-    "sweetalert2-react-content": "^4.0.1"
+    "semver": "7.3.4"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
